--- a/RoyalTea_Backend.Api/appsettings.Development.json
+++ b/RoyalTea_Backend.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "ConnectionString": "Data Source=MIHAILOPC\\SQLEXPRESS;Initial Catalog=projekat;Integrated Security=True",
+    "ConnectionString": "Data Source=MIHAILOPC\\SQLEXPRESS;Initial Catalog=RoyalTea;Integrated Security=True;MultipleActiveResultSets=true",
     "JwtConfig": {
         "Duration": 90,
         "Issuer": "RoyalTea",
