--- a/RoyalTea_Backend.Api/appsettings.Development.json
+++ b/RoyalTea_Backend.Api/appsettings.Development.json
@@ -6,9 +6,9 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "ConnectionString": "Data Source=MIHAILOPC\\SQLEXPRESS;Initial Catalog=RoyalTea;Integrated Security=True;MultipleActiveResultSets=true",
+    "ConnectionString": "Data Source=.;Initial Catalog=RoyalTea;Integrated Security=True;MultipleActiveResultSets=true",
     "JwtConfig": {
-        "Duration": 90,
+        "Duration": 99999,
         "Issuer": "RoyalTea",
         "PrivateKey": "g3j894tfjhgrewk8934qgfoqiewf9q34nwf8ie"
     }
